...
    </EditText>

    <Button
        android:id="@+id/dialog_edit_dialog_ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>
